Fixed the spacing in cover header

--- a/css/base.scss
+++ b/css/base.scss
@@ -242,7 +242,7 @@ nav {
     text-decoration: none;
   }
 
-  .cover-link:hover {
+  .cover-title-label:hover, .cover-link:hover {
     text-decoration: none;
     color: rgb(174, 170, 170);
   }
@@ -286,7 +286,7 @@ nav {
 }
 
 .cover-excerpt {
-  margin-top: 20px;
+  margin-top: 12px;
 }
 // ============= /HOME-HEADER ============= //
 
